View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025810 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-02-10 10:54 | 2015-05-14 15:31 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025810: Exception in extrema operation. | ||||
Description | Exception in extrema operation. The bug is the child of the issue: http://tracker.dev.opencascade.org/view.php?id=25781 | ||||
Steps To Reproduce | #Use the following commands to reproduce the problem: restore e1 b1 restore f1 b2 mkcurve c1 b1 mksurf s2 b2 don b1 b2 extrema c1 s2 #-------------------- # The result is: An exception was caught 5A538E9C : StdFail_NotDone: ** Exception ** 5A538E9C : StdFail_NotDone: | ||||
Tags | No tags attached. | ||||
Test case number | bugs moddata_3(010) bug25810 | ||||
child of | 0025781 | assigned | Community | BOP of coincident torus and cylinder fails in BeanFaceIntersector |
2015-02-10 10:54 developer |
e1 (965 bytes) |
2015-02-10 10:54 developer |
f1 (1,045 bytes) |
|
Alexander, it seems to be in the scope of your experience. |
|
Branch CR25810 has been created by aml. SHA-1: 28904b32dba714ea489cd4a700d6b23be51ca16e Detailed log of new commits: Author: aml Date: Tue Feb 10 13:27:11 2015 +0300 0025810: Exception in extrema operation. Fixed computation of number of analytic intersection points. |
|
Dear msv, Please check current state of branch CR25810. |
|
Reviewed. |
|
Dear BugMaster, Branch CR25810 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 28904b32dba714ea489cd4a700d6b23be51ca16e Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR25810-master-occt/Debian60-64/bugs/moddata_3/bug25810.html http://occt-tests/CR25810-master-occt/Windows-32-VC10/bugs/moddata_3/bug25810.html bugs moddata_3(010) bug25810: OK Testing on Linux: occt component : Total MEMORY difference: 84719668 / 86231430 Total CPU difference: 52019.25000000017 / 47876.709999999846 products component : Total MEMORY difference: 23371834 / 23399541 Total CPU difference: 15572.61999999996 / 14743.319999999967 Testing on Windows: occt component : Total MEMORY difference: 40649580 / 40658496 Total CPU difference: 42147.0 / 32754.0 products component : Total MEMORY difference: 11034449 / 11081969 Total CPU difference: 12344.640625 / 10978.125 There are no differences in images found by testdiff. |
|
Branch CR25810 has been updated by mkv. SHA-1: 706e9bb14b9ad03fd253ad07e5f74144ca6a2454 Detailed log of new commits: Author: mkv Date: Wed Feb 11 19:03:59 2015 +0300 Test case for issue CR25810 |
|
Dear aml, could you please review test case bugs moddata_3(010) bug25810 |
|
Dear mkv, Test case is OK. |
|
Branch CR25810 is TESTED. |
|
Branch CR25810 has been deleted by inv. SHA-1: 706e9bb14b9ad03fd253ad07e5f74144ca6a2454 |
occt: master fc0180e5 2015-02-12 09:04:55
Committer: bugmaster Details Diff |
0025810: Exception in extrema operation. Fixed computation of number of analytic intersection points. Test case for issue CR25810 |
Affected Issues 0025810 |
|
mod - src/Extrema/Extrema_ExtElCS.cxx | Diff File | ||
add - tests/bugs/moddata_3/bug25810 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-02-10 10:54 |
|
New Issue | |
2015-02-10 10:54 |
|
Assigned To | => msv |
2015-02-10 10:54 |
|
File Added: e1 | |
2015-02-10 10:54 |
|
File Added: f1 | |
2015-02-10 10:55 |
|
Status | new => assigned |
2015-02-10 10:57 |
|
Relationship added | child of 0025781 |
2015-02-10 12:03 |
|
Assigned To | msv => aml |
2015-02-10 12:04 |
|
Note Added: 0037275 | |
2015-02-10 13:28 | git | Note Added: 0037282 | |
2015-02-10 13:28 |
|
Note Added: 0037283 | |
2015-02-10 13:28 |
|
Assigned To | aml => msv |
2015-02-10 13:28 |
|
Status | assigned => resolved |
2015-02-10 15:15 |
|
Note Added: 0037288 | |
2015-02-10 15:15 |
|
Assigned To | msv => bugmaster |
2015-02-10 15:15 |
|
Status | resolved => reviewed |
2015-02-10 16:44 |
|
Assigned To | bugmaster => mkv |
2015-02-11 19:04 |
|
Note Added: 0037385 | |
2015-02-11 19:04 | git | Note Added: 0037386 | |
2015-02-11 19:05 |
|
Note Added: 0037388 | |
2015-02-11 19:05 |
|
Assigned To | mkv => aml |
2015-02-11 19:05 |
|
Status | reviewed => feedback |
2015-02-11 19:05 |
|
Test case number | => bugs moddata_3(010) bug25810 |
2015-02-12 09:10 |
|
Assigned To | aml => mkv |
2015-02-12 09:10 |
|
Note Added: 0037397 | |
2015-02-12 10:27 |
|
Note Added: 0037406 | |
2015-02-12 10:27 |
|
Assigned To | mkv => bugmaster |
2015-02-12 10:27 |
|
Status | feedback => tested |
2015-02-13 17:55 | bugmaster | Changeset attached | => occt master fc0180e5 |
2015-02-13 17:55 | bugmaster | Status | tested => verified |
2015-02-13 17:55 | bugmaster | Resolution | open => fixed |
2015-03-18 13:38 | git | Note Added: 0038601 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |