0025810: Exception in extrema operation.

Fixed computation of number of analytic intersection points.

Test case for issue CR25810